<resources>
    <string name="app_name">Healthy Recipes</string>
    <string name="description">Recipe Image</string>
    <string name="btnRecipe">View Recipe</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="txtDirections">Directions</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="txtTitle">Bruschetta Recipe</string>
    <string name="txtMix">Combine the ingredients and add salt to taste. Top French bread slices with mixture.</string>
    <string name="txtItem1">4 plum tomatoes</string>
    <string name="txtItem2">6 Basil leaves</string>
    <string name="txtItem3">3 garlic cloves; chopped</string>
    <string name="txtItem4">3 TB Olive oil</string>
</resources>