<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="109dp"
        android:layout_marginBottom="78dp"
        android:text="@string/txtTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/txtIngredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txtIngredients"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:text="@string/txtItem1"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem2"
        app:layout_constraintStart_toStartOf="@+id/txtIngredients"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredients" />

    <TextView
        android:id="@+id/txtItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem2"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem3"
        app:layout_constraintStart_toStartOf="@+id/txtItem1"
        app:layout_constraintTop_toBottomOf="@+id/txtItem1" />

    <TextView
        android:id="@+id/txtItem3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtItem3"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtItem4"
        app:layout_constraintStart_toStartOf="@+id/txtItem2"
        app:layout_constraintTop_toBottomOf="@+id/txtItem2" />

    <TextView
        android:id="@+id/txtItem4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:text="@string/txtItem4"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDirections"
        app:layout_constraintStart_toStartOf="@+id/txtItem3"
        app:layout_constraintTop_toBottomOf="@+id/txtItem3" />

    <TextView
        android:id="@+id/txtDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txtDirections"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem4" />

    <TextView
        android:id="@+id/txtMix"
        android:layout_width="348dp"
        android:layout_height="142dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="117dp"
        android:text="@string/txtMix"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDirections" />
</androidx.constraintlayout.widget.ConstraintLayout>